--- a/CategoryRender.mediawiki
+++ b/CategoryRender.mediawiki
@@ -2,7 +2,6 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
-'''DRAFT'''
 
 = 2D Accelerated Rendering =
 
@@ -19,9 +18,9 @@ This API supports the following features:
 * filled rectangles
 * texture images
 
-,,The primitives,, ^All of these^ may be drawn in opaque, blended, or additive modes.
+All of these may be drawn in opaque, blended, or additive modes.
 
-The texture images ,,may be drawn in opaque, blended, or additive modes.  They,, can have an additional color tint or alpha modulation applied to them, and may also be stretched with linear interpolation.
+The texture images can have an additional color tint or alpha modulation applied to them, and may also be stretched with linear interpolation.
 
 This API is designed to accelerate simple 2D operations. You may want more functionality such as rotation and particle effects and in that case you should use SDL's OpenGL/Direct3D support or one of the many good 3D engines.
 
