update content - w/ Sam

--- a/SDL_GetRevisionNumber.mediawiki
+++ b/SDL_GetRevisionNumber.mediawiki
@@ -12,7 +12,7 @@ int SDL_GetRevisionNumber(void)
 ```
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns a number uniquely identifying the exact revision of the SDL library in use. It is an incrementing number based on commits to hg.libsdl.org.
 
 == Code Examples ==
 ```c++
@@ -20,7 +20,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-Returns a number uniquely identifying the exact revision of the SDL library in use. It is an incrementing number based on commits to hg.libsdl.org.
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_GetRevision]]
