--- a/SDL_GetRevisionNumber.mediawiki
+++ b/SDL_GetRevisionNumber.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetRevisionNumber =
 Use this function to get the revision number of SDL that is linked against your program.
@@ -12,7 +11,7 @@ int SDL_GetRevisionNumber(void)
 ```
 
 == Return Value ==
-Returns a number uniquely identifying the exact revision of the SDL library in use. It is an incrementing number based on commits to hg.libsdl.org.
+Returns a number uniquely identifying the exact revision of the SDL library in use. 
 
 == Code Examples ==
 ```c++
@@ -20,7 +19,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This is an incrementing number based on commits to hg.libsdl.org.
 
 == Related Functions ==
 :[[SDL_GetRevision]]
