--- a/SDL_GetWindowDisplayIndex.mediawiki
+++ b/SDL_GetWindowDisplayIndex.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetWindowDisplay =
-Use this function to get the display index associated with a window.
+Use this function to get the index of the display associated with a window.
 
 
 == Syntax ==
@@ -18,7 +17,7 @@ int SDL_GetWindowDisplay(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the ,,display,, index of the display containing the center of the window on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the index of the display containing the center of the window on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -29,12 +28,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_GetClosestDisplayMode]] ?
-:[[SDL_GetCurrentDisplayMode]] ?
-:[[SDL_GetDesktopDisplayMode]] ?
-:[[SDL_GetDisplayBounds]] ?
-:[[SDL_GetDisplayMode]] ?
-:[[SDL_GetNumDisplayModes]] ?
+:[[SDL_GetDisplayBounds]]
+:[[SDL_GetNumVideoDisplays]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
