update content - w/ Sam; remove draft

--- a/SDL_GetWindowPixelFormat.mediawiki
+++ b/SDL_GetWindowPixelFormat.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetWindowPixelFormat =
 Use this function to get the pixel format associated with the window.
@@ -18,7 +17,7 @@ Uint32 SDL_GetWindowPixelFormat(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the pixel format of the window on success, or ,,a negative error code,, ^an empty string^ on failure; call [[SDL_GetError]]() for more information.
+Returns the pixel format of the window on success, or SDL_PIXELFORMAT_UNKNOWN on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -28,7 +27,6 @@ You can add your code example here
 == Remarks ==
 ''You can add useful comments here''
 
-== Related Functions ==
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
