--- a/SDL_GetWindowSurface.mediawiki
+++ b/SDL_GetWindowSurface.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetWindowSurface =
 Use this function to get the SDL surface associated with the window.
@@ -18,7 +17,7 @@ SDL_Surface* SDL_GetWindowSurface(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the surface associated with the window, or NULL on failure.
+Returns the surface associated with the window, or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
