--- a/SDL_UpdateWindowSurface.mediawiki
+++ b/SDL_UpdateWindowSurface.mediawiki
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function is used to reflect any changes to the surface on the screen.
+This is the function you use to reflect any changes to the surface on the screen.
 
 This function is equivalent to the SDL 1.2 API SDL_Flip().
 
