--- a/SDL_UpdateWindowSurfaceRects.mediawiki
+++ b/SDL_UpdateWindowSurfaceRects.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma camelcase off -->
 
 = SDL_UpdateWindowSurfaceRects =
-Use this function to copy a number of rectangles on the window surface to the screen.
+Use this function to copy areas of the window surface to the screen.
 
 
 == Syntax ==
@@ -18,7 +18,7 @@ int SDL_UpdateWindowSurfaceRects(SDL_Window* window,
 |the window to update
 |-
 |'''rects'''
-|an array of [[SDL_Rect]] structures representing the areas of the surface to update
+|an array of [[SDL_Rect]] structures representing the areas of the window to update
 |-
 |'''numrects'''
 |the number of rectangles
@@ -33,6 +33,8 @@ You can add your code example here
 ```
 
 == Remarks ==
+This is the function you use to reflect any changes to the surface on the screen. 
+
 This function is equivalent to the SDL 1.2 API SDL_UpdateRects(). 
 
 == Related Functions ==
