--- a/SDL_UpdateWindowSurfaceRects.mediawiki
+++ b/SDL_UpdateWindowSurfaceRects.mediawiki
@@ -18,7 +18,7 @@ int SDL_UpdateWindowSurfaceRects(SDL_Window* window,
 |the window to update
 |-
 |'''rects'''
-|an array of [[SDL_Rect]] structures representing the areas of the window to update
+|an array of [[SDL_Rect]] structures representing areas of the surface to copy
 |-
 |'''numrects'''
 |the number of rectangles
@@ -33,7 +33,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This is the function you use to reflect any changes to the surface on the screen. 
+This is the function you use to reflect changes to portions of the surface on the screen. 
 
 This function is equivalent to the SDL 1.2 API SDL_UpdateRects(). 
 
