--- a/SDL_AddEventWatch.mediawiki
+++ b/SDL_AddEventWatch.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_AddEventWatch =
-Use this function to add a function which is called when an event is added to the queue.
+Use this function to add a callback to be triggered when an event is added to the event queue.
 
 
 == Syntax ==
@@ -18,7 +18,7 @@ void SDL_AddEventWatch(SDL_EventFilter filter,
 |the function to call when an event happens; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
-|^a pointer to the event queue to watch^
+|a pointer that is passed to the first parameter of '''filter'''
 |}
 
 == Code Examples ==
@@ -28,12 +28,13 @@ You can add your code example here
 
 == Remarks ==
 <<Include(SDL_SetEventFilter, , , from="Start Include here.", to="##End Include here")>>
+: where <code>YourEventFilter</code> is the name of your function, <code>userdata</code> is is what was passed as '''userdata''' to [[SDL_AddEventWatch]]() and <code>event</code> is the event that triggered the callback.
 
-''You can add useful comments here''
+
 
 == Related Functions ==
 :[[SDL_DelEventWatch]]
-:[[SDL_SetEventFilter]] ???
+:[[SDL_SetEventFilter]]
 
 ----
 [[CategoryAPI]], [[CategoryEvents]]
