--- a/SDL_DelEventWatch.mediawiki
+++ b/SDL_DelEventWatch.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_DelEventWatch =
-Use this function to remove an event watch function added with [[SDL_AddEventWatch]]().
+Use this function to remove an event watch callback added with [[SDL_AddEventWatch]]().
 
 
 == Syntax ==
@@ -15,10 +15,10 @@ void SDL_DelEventWatch(SDL_EventFilter filter,
 == Function Parameters ==
 {|
 |'''filter'''
-|the function to stop calling; see [[#Remarks|Remarks]] for details
+|the function originally passed to [[SDL_AddEventWatch]](); see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
-|^a pointer to the event queue to stop watching^
+|the pointer originally passed to [[SDL_AddEventWatch]]()
 |}
 
 == Code Examples ==
@@ -27,8 +27,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-<<Include(SDL_SetEventFilter, , , from="Start Include here.", to="##End Include here")>>
-:where <code>YourEventFilter</code> is the name of your function, <code>userdata</code> is is what was passed as '''userdata''' to [[SDL_DelEventWatch]]() and <code>event</code> is the event that triggered the callback.
+This function takes the same input as [[SDL_AddEventWatch]]() to identify and delete the corresponding callback.
 
 == Related Functions ==
 :[[SDL_AddEventWatch]]
