--- a/SDL_DollarGestureEvent.mediawiki
+++ b/SDL_DollarGestureEvent.mediawiki
@@ -49,7 +49,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+[[SDL_DollarGestureEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_DOLLARGESTURE is reported.  You would access it through the event's <code>dgesture</code> field.
 
 == Related Enumerations ==
 :[[SDL_EventType]]
