--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -30,7 +30,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_JoyAxisEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_JOYAXISMOTION is reported.  You would access it through the event's jaxis field.
+[[SDL_JoyAxisEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_JOYAXISMOTION is reported.  You would access it through the event's <code>jaxis</code> field.
 
 An SDL_JOYAXISMOTION event occurs whenever a user moves an axis on the joystick.
 
