--- a/SDL_JoyBallEvent.mediawiki
+++ b/SDL_JoyBallEvent.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_JoyBallEvent =
 A structure that contains joystick trackball motion event information.
@@ -34,7 +34,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_JoyBallEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_JOYBALLMOTION is reported.
+[[SDL_JoyBallEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_JOYBALLMOTION is reported.  You would access it through the event's <code>jball</code> field.
 
 An SDL_JOYBALLMOTION event occurs when a user moves a trackball on the joystick.
 
