--- a/SDL_JoyButtonEvent.mediawiki
+++ b/SDL_JoyButtonEvent.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_JoyButtonEvent =
 A structure that contains joystick button event information.
@@ -9,7 +9,7 @@ A structure that contains joystick button event information.
 {|
 |Uint32
 |'''type'''
-|SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP
+|the event type; SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP
 |-
 |Uint8
 |'''which'''
@@ -21,7 +21,7 @@ A structure that contains joystick button event information.
 |-
 |Uint8
 |'''state'''
-|SDL_PRESSED or SDL_RELEASED
+|the state of the button; SDL_PRESSED or SDL_RELEASED
 |}
 
 == Code Examples ==
@@ -30,7 +30,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_JoyButtonEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP is reported.
+[[SDL_JoyButtonEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP is reported.  You would access it through the event's <code>jbutton</code> field.
 
 An SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP event occurs whenever a user presses or releases a button on a joystick.
 
@@ -38,6 +38,7 @@ An SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP event occurs whenever a user presses or 
 :[[SDL_EventType]]
 
 == Related Structures ==
+:[[SDL_Event]]
 :[[SDL_JoyAxisEvent]]
 :[[SDL_JoyBallEvent]]
 :[[SDL_JoyHatEvent]]
