--- a/SDL_JoyHatEvent.mediawiki
+++ b/SDL_JoyHatEvent.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_JoyHatEvent =
 A structure that contains joystick hat position change event information.
@@ -30,7 +30,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_JoyHatEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_JOYHATMOTION is reported.
+[[SDL_JoyHatEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_JOYHATMOTION is reported.  You would access it through the event's <code>jhat</code> field.
 
 An SDL_JOYHATMOTION event occurs whenever a user moves a hat on the joystick.
 
@@ -60,6 +60,7 @@ Note that zero means the POV is centered.
 :[[SDL_EventType]]
 
 == Related Structures ==
+:[[SDL_Event]]
 :[[SDL_JoyAxisEvent]]
 :[[SDL_JoyBallEvent]]
 :[[SDL_JoyButtonEvent]]
