--- a/SDL_MouseButtonEvent.mediawiki
+++ b/SDL_MouseButtonEvent.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_MouseButtonEvent =
 A structure that contains mouse button event information.
@@ -9,7 +9,7 @@ A structure that contains mouse button event information.
 {|
 |Uint32
 |'''type'''
-|SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP
+|the event type; SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP
 |-
 |Uint32
 |'''windowID'''
@@ -21,7 +21,7 @@ A structure that contains mouse button event information.
 |-
 |Uint8
 |'''state'''
-|SDL_PRESSED or SDL_RELEASED
+|the state of the button; SDL_PRESSED or SDL_RELEASED
 |-
 |int
 |'''x'''
@@ -38,7 +38,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_MouseButtonEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP is reported.
+[[SDL_MouseButtonEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP is reported.  You would access it through the event's <code>button</code> field.
 
 An SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP event occurs whenever a user presses or releases a button on a mouse.
 
@@ -59,6 +59,7 @@ An SDL_MOUSEBUTTONDOWN or SDL_MOUSEBUTTONUP event occurs whenever a user presses
 :[[SDL_EventType]]
 
 == Related Structures ==
+:[[SDL_Event]]
 :[[SDL_MouseMotionEvent]]
 :[[SDL_MouseWheelEvent]]
 
