--- a/SDL_MultiGestureEvent.mediawiki
+++ b/SDL_MultiGestureEvent.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_MultiGestureEvent =
@@ -30,7 +30,7 @@ A structure that contains multiple finger gesture event ^information^.
 |-
 |float
 |'''x'''
-|//currently 0...1. Change to screen coords?
+|description
 |-
 |float
 |'''y'''
@@ -38,10 +38,6 @@ A structure that contains multiple finger gesture event ^information^.
 |-
 |Uint16
 |'''numFingers'''
-|description
-|-
-|Uint16
-|'''padding'''
 |description
 |}
 
@@ -51,13 +47,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+[[SDL_MultiGestureEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_MULTIGESTURE is reported. You would access it through the event's <code>mgesture</code> field. 
 
 == Related Enumerations ==
 :[[SDL_EventType]]
 
 == Related Structures ==
- ,[[SDL_DollarGestureEvent]]
+:[[SDL_DollarGestureEvent]]
 :[[SDL_Event]]
 
 == Related Functions ==
