--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -5,7 +5,7 @@
 
 = Querying SDL Version =
 
-'''Include File(s):''' [http://hg.libsdl.org/SDL/file/default/include/SDL_version.h SDL_version.h]
+'''Include File(s):''' [http://hg.libsdl.org/SDL/file/default/include/SDL_version.h SDL_version.h], [http://hg.libsdl.org/SDL/file/default/include/SDL_revision.h SDL_revision.h]
 
 
 == Introduction ==
