--- a/SDL_HapticNumAxes.mediawiki
+++ b/SDL_HapticNumAxes.mediawiki
@@ -30,6 +30,7 @@ You can add your code example here
 
 == Related Structures ==
 :[[SDL_HapticDirection]]???
+<<Color2(green,No other function page includes this section so it should be deleted when major editing is done.  Should this information be included in the Remarks instead?)>>
 
 == Related Functions ==
 
