--- a/SDL_SysWMEvent.mediawiki
+++ b/SDL_SysWMEvent.mediawiki
@@ -1,9 +1,9 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_SysWMEvent =
-A structure that contains a video driver dependent system event (event.syswm.*) .
+A structure that contains a video driver dependent system event.
 
 
 == Data Fields ==
@@ -25,7 +25,9 @@ You can add your code example here
 == Remarks ==
 If you want to use this event, you should include SDL_syswm.h.
 
-*<br/>If you want to obtain system-specific information about the window manager, you can fill in the '''version''' member of an [[SDL_SysWMinfo]] structure (details can be found in SDL_syswm.h, ,,which must be included,,) using the [[SDL_VERSION]]() macro found in SDL_version.h, and pass it to the function* ,,[[SDL_GetWMInfo]](),,.  <<Color2(green,I think this function has been replaced by [[SDL_GetWindowWMInfo]]().  Is that right?  Old wiki included)>> ```
+[[SDL_SysWMEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_SYSWMEVENT is reported. You would access it through the event's <code>syswm</code> field. 
+
+*<br/>If you want to obtain system-specific information about the window manager, you can fill in the <code>version</code> member of an [[SDL_SysWMinfo]] structure (details can be found in SDL_syswm.h, ,,which must be included,,) using the [[SDL_VERSION]]() macro found in SDL_version.h, and pass it to the function* ,,[[SDL_GetWMInfo]](),,.  <<Color2(green,I think this function has been replaced by [[SDL_GetWindowWMInfo]]().  Is that right?  Old wiki included)>> ```
 int SDL_GetWMInfo(SDL_SysWMinfo *info);
 ```
 
